; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_font.c_draw_text.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_font.c_draw_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@savedFont = common dso_local global %struct.TYPE_2__* null, align 8
@root_visual_type = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_text(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @savedFont, align 8
  %16 = icmp ne %struct.TYPE_2__* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i32*, i32** %11, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %7
  %22 = load i32*, i32** @root_visual_type, align 8
  store i32* %22, i32** %11, align 8
  br label %23

23:                                               ; preds = %21, %7
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @savedFont, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  switch i32 %26, label %51 [
    i32 130, label %27
    i32 128, label %28
    i32 129, label %38
  ]

27:                                               ; preds = %23
  br label %51

28:                                               ; preds = %23
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @i3string_as_ucs2(i32* %29)
  %31 = load i32*, i32** %8, align 8
  %32 = call i32 @i3string_get_num_glyphs(i32* %31)
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %12, align 4
  %36 = load i32, i32* %13, align 4
  %37 = call i32 @draw_text_xcb(i32 %30, i32 %32, i32 %33, i32 %34, i32 %35, i32 %36)
  br label %51

38:                                               ; preds = %23
  %39 = load i32*, i32** %8, align 8
  %40 = call i32 @i3string_as_utf8(i32* %39)
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @i3string_get_num_bytes(i32* %41)
  %43 = load i32, i32* %9, align 4
  %44 = load i32*, i32** %11, align 8
  %45 = load i32, i32* %12, align 4
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* %14, align 4
  %48 = load i32*, i32** %8, align 8
  %49 = call i32 @i3string_is_markup(i32* %48)
  %50 = call i32 @draw_text_pango(i32 %40, i32 %42, i32 %43, i32* %44, i32 %45, i32 %46, i32 %47, i32 %49)
  br label %51

51:                                               ; preds = %27, %38, %23, %28
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @draw_text_xcb(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @i3string_as_ucs2(i32*) #1

declare dso_local i32 @i3string_get_num_glyphs(i32*) #1

declare dso_local i32 @draw_text_pango(i32, i32, i32, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @i3string_as_utf8(i32*) #1

declare dso_local i32 @i3string_get_num_bytes(i32*) #1

declare dso_local i32 @i3string_is_markup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
